trying to fix header on mobile nav

--- a/styles/style.css
+++ b/styles/style.css
@@ -331,7 +331,6 @@ h2 {
 }
 
 header {
-  height: 100vh;
   width: 100%;
   position: relative;
   z-index: 5;
